<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_default"
    tools:context="pro.eluzivespikes.jodatimeutils.demo.pro.spikes.com.demo.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_select_format"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/spinner_date_format"
        android:text="@string/select_date_format"
        app:layout_constraintEnd_toStartOf="@+id/spinner_date_format"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_date_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/spacing_small"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_date_picker"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:text="@string/date_picker"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintEnd_toStartOf="@+id/button_date_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_date_format" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_selected_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        app:layout_constraintEnd_toStartOf="@+id/button_date_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date_picker"
        tools:text="08/10/2017" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_date_picker"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_date_format" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_range_picker"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/range_picker"
        app:layout_constraintEnd_toStartOf="@+id/button_range_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_selected_date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_selected_range_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:text="@string/ph_range_from"
        app:layout_constraintEnd_toStartOf="@+id/button_range_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_range_picker" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_selected_range_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:text="@string/ph_range_to"
        app:layout_constraintEnd_toStartOf="@+id/button_range_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_selected_range_from" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_range_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_range_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_range_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>
